<?xml version="1.0"?>
<package>
  <name>leddartech</name>
  <version>0.0.1</version>
  <description>The leddartech package</description>

  <maintainer email="jpmercier87@gmail.com">Jean-Philippe Mercier</maintainer>
  <license>GPLv2</license>
  <author email="jpmercier87@gmail.com">Jean-Philippe Mercier</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export> </export>
</package>
